--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "md-links",
+  "type": "module",
   "version": "0.1.0",
   "engines": {
     "node": ">=16.x"
@@ -9,10 +10,9 @@
     "version": "5.6.0",
     "commit": "ffa75c8b2bede153844195479abeff01f3e34227"
   },
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "^7.21.8",
-    "@babel/plugin-transform-modules-commonjs": "^7.21.5",
-    "babel": "^6.23.0",
+    "@babel/preset-env": "^7.21.5",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0"
   }
