--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0"
+    "chalk": "^5.2.0",
+    "figlet": "^1.6.0",
+    "jest": "^29.5.0",
+    "markdown-it": "^13.0.1",
+    "node-fetch": "^3.3.1",
+    "ora": "^6.3.1"
   }
 }
