--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "figlet": "^1.6.0",
     "jest": "^29.5.0",
     "markdown-it": "^13.0.1",
-    "node-fetch": "^3.3.1",
-    "ora": "^6.3.1"
+    "node-fetch": "^3.3.1"
   }
 }
