--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "commit": "ffa75c8b2bede153844195479abeff01f3e34227"
   },
   "scripts": {
-    "test": "jest --verbose --coverage", 
+    "test": "jest --verbose --coverage",
     "start": "node index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
+    "axios": "^1.4.0",
     "babel-jest": "^29.5.0",
     "chalk": "^5.2.0",
     "jest": "^29.5.0",
